cfn_benchmark/cfn_templates/kdivecha__sonarqube-cfn/cfn/sonarqube-sgs.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Template for creating Security groups.",
  "Conditions": {},
  "Outputs": {
    "AppSG": {
      "Description": "Application Security Group",
      "Value": {
        "Ref": "AppSG"
      }
    },
    "RdsSG": {
      "Description": "RDS Security Group",
      "Value": {
        "Ref": "RdsSG"
      }
    }
  },
  "Parameters": {
    "LoadBalancerSG": {
      "Type": "String"
    },
    "ParentStack": {
      "Type": "String"
    },
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id",
      "AllowedPattern": "^vpc-[0-9a-f]*$"
    }
  },
  "Resources": {
    "AppSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
                "GroupDescription": "EC2 Security Group",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 25,
                        "ToPort": 25,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "SMTP Port"
                    },
          {
                        "IpProtocol": "udp",
                        "FromPort": 123,
                        "ToPort": 123,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "NTP Servers external"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 389,
                        "ToPort": 389,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "LDAP Port"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "HTTPS Port"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0",
                        "Description": "HTTP Port"
                    }
                ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ParentStack"
                  },
                  " - EC2"
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VpcId"
        }
      }
        },
    "RdsSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "RDS Security Group",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ParentStack"
                  },
                  " - RDS"
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VpcId"
        }
      }
    },
    "ApptoRDSIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "RdsSG"
        },
        "SourceSecurityGroupId": {
          "Ref": "AppSG"
        },
        "Description": "RDS Postgres",
        "IpProtocol": "tcp",
        "FromPort": 5432,
        "ToPort": 5432
      }
    },
    "ALBtoAppIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AppSG"
        },
        "SourceSecurityGroupId": {
          "Ref": "LoadBalancerSG"
        },
        "Description": "HTTP Port from ELB",
        "IpProtocol": "tcp",
        "FromPort": 9000,
        "ToPort": 9000
      }
        },
        "ApptoRDSEgress": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "Description": "RDS Port 5432 from RDS to App",
                "IpProtocol": "tcp",
                "FromPort": 5432,
                "ToPort": 5432,
                "GroupId": {
                    "Ref": "AppSG"
                },
                "DestinationSecurityGroupId": {
                    "Ref": "RdsSG"
                }
            }
        }
  }
}
